
04/03/2011 Changes

Added parsing of cascaded messages and generation of cascaded message sends.


03/03/2011 Changes

Added output of string for ASM mnemonic to provide more meaningful trace of bytecodes being generated.


25/02/2011 Changes

Added handling of Assignment expressions.
Added handling of expressions made up of only a Primary.


24/02/2011 Changes

Adding index to local variables, so they can be referenced in load or store.
Added load and store of temporary and method argument variables.
Added registry of temporaries and variables. Used for lookup when a variable is referenced.


23/02/2011 Changes

Parsing temporaries in methods and scripts.
Assigning local variable slot index to each temporary.


18/02/2011 Changes

Generating code for call of primitives. ie: <primitive: x>. Not complete - need to create a method
for each primitive.


17/02/2011 Changes

Parsing pragmas ie: <primitive:>. Need to add generation of primitive system calls.


14/02/2011 Changes

Parsing Arrays "{ statements }", and generating code.
Parsing (expression)'s, and generating code for them.


13/02/2011 Changes

Looking into array {statements} support.


12/02/2011 Changes

Implemented smalltalk instance resolution enhancement suggested by Jose Antonio Illescas del Olmo.
(We now use a thread local to cache instance, rather than lookup current thread.) 
Backed out enhancement, however it did help reveal a logic error. We need to use current instance
(this) class classloader to get Smalltalk instance.
Refactored test to make it easier to change the way Smalltalk instance is fetched.
Now we fetch the smalltalk instance by looking at the receiver class' classloader.


11/01/2011 Changes

Added generation of array creation and add of array elements for Literal arrays.
+ tests around this.
Added grammar for numbers.
Added generation of Number instances from primitive numbers.
Added Smalltalk Runtime class library placeholders.


10/01/2011 Changes
